cabal-version:   3.0
name:            fon
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
author:          LitFill
maintainer:      marrazzy54@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable fon
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.20.0.0,
                      megaparsec,
                      text,
                      flow
    hs-source-dirs:   app
    default-language: GHC2024
